--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,14 @@ android {
     kotlinOptions {
         jvmTarget = '11'
     }
+
+    variantFilter { variant ->
+//        def names = variant.flavors*.name
+        def isReleaseBuildType = variant.buildType.name == "release"
+        if (isReleaseBuildType) {
+            setIgnore(true)
+        }
+    }
 }
 //
 //configurations.all {
@@ -56,6 +64,7 @@ dependencies {
     implementation(libs.bundles.ktx)
     implementation(libs.constraintlayout)
     testImplementation('junit:junit:4.13.2') {
+        //失效
 //        force = true
     }
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
@@ -70,8 +79,8 @@ dependencies {
     implementation("com.google.android.material:material") {
         version {
 //            strictly("1.4.0")
-            strictly("]1.7, 1.8[")
-//            prefer("1.7.25")
+//            strictly("]1.2, 1.7[")
+            prefer("1.5.0")
 //            require("1.7.25")
         }
     }
