修改配置文件

--- a/gradle.properties
+++ b/gradle.properties
@@ -29,3 +29,24 @@ org.gradle.unsafe.configuration-cache=true
 org.gradle.parallel=true
 
 org.gradle.caching=true
+
+#您应用中的 R 类将只会包含在子项目中声明的资源，依赖项中的资源会被排除在外。这样一来，子项目中的 R 类大小将会显著减少。
+android.nonTransitiveRClass=true
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
