--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,5 @@ rootProject.name = "Gradle7"
 include ':app'
 
 //includeBuild()
+//更多学习参考
+// https://docs.gradle.org/7.3.3/userguide/platforms.html#sub:central-declaration-of-dependencies
