--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ android.enableJetifier=true
 kotlin.code.style=official
 org.gradle.vfs.watch=true
 org.gradle.configureondemand=true
-org.gradle.unsafe.configuration-cache=true
+#org.gradle.unsafe.configuration-cache=true
 org.gradle.parallel=true
 org.gradle.caching=true
 android.nonTransitiveRClass=true
