--- a/app/build.gradle
+++ b/app/build.gradle
@@ -153,7 +153,7 @@ dependencies {
 
 dependencies {
     implementation project(":common")
-//    implementation "com.android.tools.build:gradle:7.4.2"
+    implementation("com.android.tools.build:gradle:7.0.0")
     gradleApi()
     implementation "org.jetbrains.kotlin:kotlin-gradle-plugin-api:1.8.0"
 
@@ -167,8 +167,8 @@ dependencies {
         //失效
 //        force = true
     }
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     //版本管理
     // 1:版本号后面的!!表示strict约束，表示版本锁定
@@ -191,28 +191,24 @@ dependencies {
 //    }
 }
 
-//abstract class GetGitShaTask extends DefaultTask {
-//    @OutputFile
-//    abstract RegularFileProperty getOutputFile()
-//
-//    @Inject
-//    abstract ExecOperations getExecOperations()
-//
-//    @TaskAction
-//    void process() {
-//        def stdout = new ByteArrayOutputStream()
-//        getExecOperations().exec {
-//            it.commandLine("git", "rev-parse", "HEAD")
-//            standardOutput = stdout
-//        }
-//        getOutputFile().get().asFile.write(stdout.toString())
-//    }
-//}
+abstract class GetGitShaTask extends DefaultTask {
+    @OutputFile
+    abstract RegularFileProperty getOutputFile()
 
-//project.tasks.register("myTask", GetGitShaTask) {
-//    getOutputFile().set(project.layout.buildDirectory.file("sha.txt"))
-//}
+    @Inject
+    abstract ExecOperations getExecOperations()
 
-androidComponents {
+    @TaskAction
+    void process() {
+        def stdout = new ByteArrayOutputStream()
+        getExecOperations().exec {
+            it.commandLine("git", "rev-parse", "HEAD")
+            standardOutput = stdout
+        }
+        getOutputFile().get().asFile.write(stdout.toString())
+    }
+}
 
+project.tasks.register("myTask", GetGitShaTask) {
+    getOutputFile().set(project.layout.buildDirectory.file("sha.txt"))
 }
